Font fixes (line height discrepancy on Firefox).

--- a/src/App.css
+++ b/src/App.css
@@ -437,24 +437,17 @@
 }
 
 .text-box-overview {
-    position: sticky;
-    top: -15px;
-    line-height: 50px;
-    background-color: red;
-    padding-top: -15;
-    font-family: Helvetica;
+    
 }
 
 .text-animate-in {
     width: 100%;
     opacity: 0;
-    padding: 0;
 }
 
 .text-animate-in-offscreen {
     opacity: 0;
     animation: text-out 1s ease-in-out normal 1;
-    padding: 0;
 }
 
 @keyframes text-out {
@@ -483,14 +476,17 @@
 }
 
 .text-box {
+    position: sticky;
+    top: 15px;
+
     font-size: 35px;
     font-weight: 600;
     text-align: start;
     width: auto;
     padding: 0px;
-    margin: -15px 25px 0px 25px;
+    margin: -15px 25px 30px 25px;
     /*color: white;*/
-    border: 0.001px solid rgba(0, 0, 0, 0);
+    /*border: 0.001px solid rgba(0, 0, 0, 0);*/
     /*text-shadow: black 0 0 2px;*/
     /*background-color: #f3ec78;
     background-image: linear-gradient(45deg, #f3ec78, #af4261);
